--- a/overlays/themes/DescendantQS/AndroidManifest.xml
+++ b/overlays/themes/DescendantQS/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="org.descendant.qs.default.overlay"
+        package="org.descendant.qs.descendant.overlay"
         android:versionCode="1"
         android:versionName="1.0">
         <overlay android:targetPackage="com.android.systemui"
